syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

package com.mkappworks.proto;

message Vehicle {
  string vehicle_id = 1;
}

message GeoLocation {
  float longitude = 1;
  float latitude = 2;
  google.protobuf.Timestamp time_stamp = 3;
}

service VehicleGeoLocationService {
  //bi-directional streaming - Asynchronous
  //client will send stream of request and server will respond with stream of response.
  rpc getGeoLocationsByVehicle(Vehicle) returns (stream GeoLocation) {}
}